Ajouts notes archivées

--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,9 @@
 **/Docs/
 **/OLD/
 
+# Exceptions
+!Archives.zip
+
 # Exceptions dans le dossier Samoens-GIS
 !/Samoens-GIS/dem/IGN_JB_10m-IGN.th
 !TODO.txt
